--- a/index.html
+++ b/index.html
@@ -19,11 +19,13 @@
               >Студия<i class="far fa-hand-pointer"></i
             ></a>
           </li>
+
           <li>
             <a class="link portfolio black" href="" target="_blank"
               >Портфолио</a
             >
           </li>
+
           <li><a class="link contacts black" href="">Контакты</a></li>
         </ul>
       </nav>
@@ -43,7 +45,7 @@
       <section>
         <ul>
           <li>
-            <h6>Внимание к деталям</h6>
+            <h3>Внимание к деталям</h3>
             <p>
               Идейные соображения, а также начало повседневной работы по
               формированию позиции.
@@ -51,7 +53,7 @@
           </li>
 
           <li>
-            <span>Пунктуальность</span>
+            <h3>Пунктуальность</h3>
             <p>
               Задача организации, в особенности же рамки и место обучения кадров
               влечет за собой.
@@ -59,7 +61,7 @@
           </li>
 
           <li>
-            <span>Планирование</span>
+            <h3>Планирование</h3>
             <p>
               Равным образом консультация с широким активом в значительной
               степени обуславливает.
@@ -67,7 +69,7 @@
           </li>
 
           <li>
-            <span>Современные технологии</span>
+            <h3>Современные технологии</h3>
             <p>
               Значимость этих проблем настолько очевидна, что реализация
               плановых заданий.
@@ -77,50 +79,52 @@
       </section>
 
       <section>
-        <div>
-          <h3>Чем мы занимаемся</h3>
-          <img src="img/box1.png" alt="img" width="370" />
-          <img src="img/box2.png" alt="img" width="370" />
-          <img src="img/box3.png" alt="img" width="370" />
-        </div>
+        <h2>Чем мы занимаемся</h2>
+        <ul>
+          <li><img src="img/box1.png" alt="img" width="370" /></li>
+          <li><img src="img/box2.png" alt="img" width="370" /></li>
+          <li><img src="img/box3.png" alt="img" width="370" /></li>
+        </ul>
       </section>
 
       <section>
-        <h3>Наша команда</h3>
-        <div>
-          <div>
+        <h2>Наша команда</h2>
+        <ul>
+          <li>
             <img src="img/img.jpg" alt="img" width="270" />
             <span>Игорь Демьяненко</span>
             <p>Product Designer</p>
-          </div>
+          </li>
 
-          <div>
+          <li>
             <img src="img/img1.jpg" alt="img" width="270" />
             <span>Ольга Репина</span>
             <p>Frontend Developer</p>
-          </div>
+          </li>
 
-          <div>
+          <li>
             <img src="img/img2.jpg" alt="img" width="270" />
             <span>Николай Тарасов</span>
             <p>Marketing</p>
-          </div>
+          </li>
 
-          <div>
+          <li>
             <img src="img/img3.jpg" alt="img" width="270" />
             <span>Михаил Ермаков</span>
             <p>UI Designer</p>
-          </div>
-        </div>
+          </li>
+        </ul>
       </section>
     </main>
+
     <footer>
       <a href="/">WebStudio</a>
+
       <address>
         <ul>
-          <li>г. Киев, пр-т Леси Украинки, 26</li>
-          <li>info@example.com</li>
-          <li>+38 099 111 11 11</li>
+          <li><a href="">г. Киев, пр-т Леси Украинки, 26</a></li>
+          <li><a href="">info@example.com</a></li>
+          <li><a href="">+38 099 111 11 11</a></li>
         </ul>
       </address>
     </footer>
