--- a/index.html
+++ b/index.html
@@ -92,25 +92,25 @@
         <ul>
           <li>
             <img src="img/img.jpg" alt="img" width="270" />
-            <span>Игорь Демьяненко</span>
+            <h3>Игорь Демьяненко</h3>
             <p>Product Designer</p>
           </li>
 
           <li>
             <img src="img/img1.jpg" alt="img" width="270" />
-            <span>Ольга Репина</span>
+            <h3>Ольга Репина</h3>
             <p>Frontend Developer</p>
           </li>
 
           <li>
             <img src="img/img2.jpg" alt="img" width="270" />
-            <span>Николай Тарасов</span>
+            <h3>Николай Тарасов</h3>
             <p>Marketing</p>
           </li>
 
           <li>
             <img src="img/img3.jpg" alt="img" width="270" />
-            <span>Михаил Ермаков</span>
+            <h3>Михаил Ермаков</h3>
             <p>UI Designer</p>
           </li>
         </ul>
